<resources>
    <string name="app_name">eventsexecutor</string>
    <string name="pulsante_esterno">EXTERNAL BUTTON</string>
    <string name="option_face">FACIAL EXPR.</string>
    <string name="other_modules">OTHER MODULES</string>
    <string name="no_actions">No actions available. Register a new one using the action configurator!</string>
    <string name="swipe_direction">Swipe direction:</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="select_an_event_to_continue">Select an event to continue</string>
    <string name="configuration_mode">Configuration mode</string>
    <string name="tap" translatable="false">Tap</string>
    <string name="joystick" translatable="false">Joystick</string>
    <string name="swipe" translatable="false">Swipe</string>
    <string name="long_tap" translatable="false">Long tap</string>
    <string name="monodimensional_sliding">Monodimensional sliding</string>
    <string name="tap_on_off" translatable="false">Tap on/off</string>
    <string name="move_left">Move left:</string>
    <string name="select_an_action">Select an action...</string>
    <string name="move_right">Move right:</string>
    <string name="reset_pointer">Reset pointer:</string>
    <string name="error_same_action_sliding">Select three different actions</string>
    <string name="error_same_action">At the moment it is not possible to assign two events to the same action</string>
    <string name="reset_to_initial_position">Reset to initial position</string>
    <string name="select_all_actions">Select all required actions</string>
    <string name="no_other_modules_actions">No actions found. Please verify that other PlayAccess compatible modules are installed on your device</string>
    <string name="tutorial_step1">Welcome to PlayAccess!\Tap here to enter configuration mode.\nRemember that you can move this icon at any time</string>
    <string name="tutorial_step2">Tap here to add your first event</string>
    <string name="tutorial_step3">Your event is here. Move it where you want or tap to edit</string>
</resources>