<?xml version="1.0" encoding="utf-8"?>
<it.unimi.di.ewlab.iss.gamesconfigurator.dialogs.SlidingEventDialog xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="26dp">

        <LinearLayout
            android:id="@+id/additional_actions_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/move_left"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/actionLeftTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_an_action"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/move_right"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/actionRightTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_an_action"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_pointer"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/actionResetTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_an_action"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/resetToStartCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:text="@string/reset_to_initial_position" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="end">

            <FrameLayout
                android:id="@+id/deleteButtonLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone">

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:padding="0dp"
                    android:text="@string/delete"
                    android:textColor="@android:color/holo_red_light" />
            </FrameLayout>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:padding="0dp"
                android:text="@string/cancel"
                android:textColor="@color/primaryColor" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:padding="0dp"
                android:text="@string/ok"
                android:textColor="@color/primaryColor" />
        </LinearLayout>

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all_actions"
            android:textColor="#FF0000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/sameActionErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_same_action"
            android:textColor="#FF0000"
            android:visibility="gone" />
    </LinearLayout>
</it.unimi.di.ewlab.iss.gamesconfigurator.dialogs.SlidingEventDialog>